data/derived/comb/progs/unify/prog6166.ml.out
Characters 110-122:
  let args = failwith List.combine(l1,l2) in
                      ^^^^^^^^^^^^
Error: This expression has type 'a list -> 'b list -> ('a * 'b) list
       but an expression was expected of type string
